name:                ff
version:             0.1.0.0
synopsis:            A fuzzy finder
-- description:
homepage:            http://defn.io
license:             MIT
license-file:        LICENSE
author:              Bogdan Popa
maintainer:          popa.bogdanp@gmail.com
copyright:           2014 Bogdan Popa
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ff
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base        >=4.7
                     , containers
                     , directory
                     , filepath
                     , monad-loops
                     , stm
                     , text
                     , unix
                     , vector
                     , vty
                     , vty-ui
  ghc-options:         -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010